--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/ValidationErrorDialog.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/ValidationErrorDialog.razor
@@ -1,6 +1,6 @@
 ﻿@implements IDialogContentComponent<IValidateable>
 
-<DialogBase Content="@Content" SubmitButtonText="@StringResources.Button_Ok">
+<ValidationDialogBase Content="@Content" SubmitButtonText="@StringResources.Button_Ok">
     <FluentLabel Typo="Typography.PaneHeader" Color="Color.Error">@StringResources.Validation_CannotSave</FluentLabel>
     <br />
     <FluentDivider />
@@ -21,4 +21,4 @@
         <FluentDivider />
         <br />
     }
-</DialogBase>
+</ValidationDialogBase>
