--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/EditPersonalityDialog.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/EditPersonalityDialog.razor
@@ -1,6 +1,6 @@
 ﻿@implements IDialogContentComponent<PersonalityViewModel>
 
-<ValidationDialogBase Content="@Content">
+<EditDialogBase Content="@Content">
     <FluentTextField @bind-Value="Content.CharacterName" Label="@StringResources.Character_Name" Immediate="true" Required="true" title="@StringResources.Validation_Tooltip_Required" />
     <ValidationMessage For="@(() => Content.CharacterName)" />
     <br />
@@ -55,4 +55,4 @@
 
     <FluentTextField InputMode="InputMode.Numeric" @bind-Value="Content.Experience" Label="@StringResources.Character_Personality_Experience" Immediate="true" Required="true" title="@StringResources.Validation_Tooltip_Required" />
     <ValidationMessage For="@(() => Content.Experience)" />
-</ValidationDialogBase>
+</EditDialogBase>
