Linter: Rename `GenericCard` to `EditCardAbstraction`;
Comment: We didn't use the name `EditCardbase` since we might create an `EditCardBase` that has an UI (similar to the current `CardBase`) and `EditCardAbstraction` is just an abstract class to inherit from which does not provide an UI;

--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/PersonalityCard.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/PersonalityCard.razor
@@ -1,4 +1,4 @@
-﻿@inherits GenericCard<PersonalityViewModel, EditPersonalityDialog>
+﻿@inherits EditCardAbstraction<PersonalityViewModel, EditPersonalityDialog>
 
 <CardBase Title="@StringResources.Character_Personality" EditButtonText="@EditButtonText" EditButtonIcon="@EditButtonIcon" EditButtonCallback="EditAsync" CardClickCallback="EditAsync" HasValidationErrors="@(ViewModel.HasValidationErrors)">
     <br />
