--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/RescueDicesCard.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/RescueDicesCard.razor
@@ -1,4 +1,4 @@
-﻿@inherits GenericCard<RescueDicesViewModel, EditRescueDicesDialog>
+﻿@inherits EditCardAbstraction<RescueDicesViewModel, EditRescueDicesDialog>
 
 <CardBase Title="@StringResources.Character_RescueDices" EditButtonText="@EditButtonText" EditButtonIcon="@EditButtonIcon" EditButtonCallback="EditAsync" CardClickCallback="EditAsync" HasValidationErrors="@(ViewModel.HasValidationErrors)">
     <br />
