--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/RescueDicesCard.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/RescueDicesCard.razor
@@ -1,6 +1,6 @@
 ﻿@inherits EditCardAbstraction<RescueDicesViewModel, EditRescueDicesDialog>
 
-<CardBase Title="@StringResources.Character_RescueDices" EditButtonText="@EditButtonText" EditButtonIcon="@EditButtonIcon" EditButtonCallback="EditAsync" CardClickCallback="EditAsync" HasValidationErrors="@(ViewModel.HasValidationErrors)">
+<EditableCardBase Title="@StringResources.Character_RescueDices" EditButtonText="@EditButtonText" EditButtonIcon="@EditButtonIcon" EditButtonCallback="EditAsync" CardClickCallback="EditAsync" HasValidationErrors="@(ViewModel.HasValidationErrors)">
     <br />
     <div><strong>@StringResources.Character_Strength:</strong> @ViewModel.Strength </div>
     <br />
@@ -13,6 +13,6 @@
     <div><strong>@StringResources.Character_Wisdom:</strong> @ViewModel.Wisdom </div>
     <br />
     <div><strong>@StringResources.Character_Charisma:</strong> @ViewModel.Charisma </div>
-</CardBase>
+</EditableCardBase>
 
 
