--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/CharacterCard.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/CharacterCard.razor
@@ -1,4 +1,4 @@
-﻿<CardBase 
+﻿<EditableCardBase 
     Title="@ViewModel.PersonalityViewModel.CharacterName" 
     EditButtonCallback="EditCharacter"
     CardClickCallback="SelectCharacterAsync"
@@ -24,5 +24,4 @@
         <div style="height: 200px; width: 200px;" />
         <br />
     }
-</CardBase>
-
+</EditableCardBase>
