Linter: Rename `EditCardAbstraction` to `EditableCardAbstraction`;
Comment: Naming reason is same as for `EditableCardBase`;

--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/PersonalityCard.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/PersonalityCard.razor
@@ -1,4 +1,4 @@
-﻿@inherits EditCardAbstraction<PersonalityViewModel, EditPersonalityDialog>
+﻿@inherits EditableCardAbstraction<PersonalityViewModel, EditPersonalityDialog>
 
 <EditableCardBase Title="@StringResources.Character_Personality" EditButtonText="@EditButtonText" EditButtonIcon="@EditButtonIcon" EditButtonCallback="EditAsync" CardClickCallback="EditAsync" HasValidationErrors="@(ViewModel.HasValidationErrors)">
     <br />
