WIP: Add `EditDialogParameter` to pass ViewModel (Content) and Cards (References) to prepare Navigation;

--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/EditableCardBase.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/EditableCardBase.razor
@@ -19,11 +19,13 @@
                     </div>
                 </FluentAccordionItem>
             </FluentAccordion>
+        </FluentBodyContent>
 
-            <br />
-            <FluentDivider />
-            <br />
+        <FluentFooter>
             <FluentGrid Justify="JustifyContent.SpaceAround" Style="width: 100%;">
+                <FluentGridItem xs="12">
+                    <FluentSpacer />
+                </FluentGridItem>
                 @if (ShowDeleteButton)
                 {
                     <FluentGridItem xs="6">
@@ -43,7 +45,7 @@
                     </FluentGridItem>
                 }
             </FluentGrid>
-        </FluentBodyContent>
+        </FluentFooter>
     </FluentLayout> 
 </FluentCard>
          
