Linter: Rename `Skill` to `Skillfulness` since we need the word `skills` elswhere.
Comment: This is because in german `Geschicklichkeit` can be translated to `Skill` as well as `Fertigkeiten`. So we choose `Skillfulness` for `Geschicklichkeit` and `Skills` for `Fertigkeiten`. We also considered `Ability` for `Fertigkeiten` but this would more mean `Fähigkeiten` which has a similar, but kinda different meaning;

Comment 2: > "Fähigkeit" refers to an inherent ability or talent, something you are naturally good at. "Fertigkeit," on the other hand, is a skill that you have developed through practice and learning. Essentially, "Fähigkeit" is about potential, while "Fertigkeit" is about acquired proficiency.;

--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/PropertiesCard.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/PropertiesCard.razor
@@ -4,7 +4,7 @@
     <br />
     <div><strong>@StringResources.Character_Strength:</strong> @ViewModel.Strength </div>
     <br />
-    <div><strong>@StringResources.Character_Skill:</strong> @ViewModel.Skill </div>
+    <div><strong>@StringResources.Character_Skillfulness:</strong> @ViewModel.Skillfulness </div>
     <br />
     <div><strong>@StringResources.Character_Constitution:</strong> @ViewModel.Constitution </div>
     <br />
