--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/RescueDicesCard.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/RescueDicesCard.razor
@@ -4,7 +4,7 @@
     <br />
     <div><strong>@StringResources.Character_Strength:</strong> @ViewModel.Strength </div>
     <br />
-    <div><strong>@StringResources.Character_Skill:</strong> @ViewModel.Skill </div>
+    <div><strong>@StringResources.Character_Skillfulness:</strong> @ViewModel.Skillfulness </div>
     <br />
     <div><strong>@StringResources.Character_Constitution:</strong> @ViewModel.Constitution </div>
     <br />
