--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/EditRescueDicesDialog.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/EditRescueDicesDialog.razor
@@ -5,8 +5,8 @@
     <ValidationMessage For="@(() => Content.ViewModel.Strength)" />
     <br />
 
-    <FluentTextField InputMode="InputMode.Numeric" @bind-Value="Content.ViewModel.Skill" Label="@StringResources.Character_Skill" Immediate="true" Required="true" title="@StringResources.Validation_Tooltip_Required" />
-    <ValidationMessage For="@(() => Content.ViewModel.Skill)" />
+    <FluentTextField InputMode="InputMode.Numeric" @bind-Value="Content.ViewModel.Skillfulness" Label="@StringResources.Character_Skillfulness" Immediate="true" Required="true" title="@StringResources.Validation_Tooltip_Required" />
+    <ValidationMessage For="@(() => Content.ViewModel.Skillfulness)" />
     <br />
 
     <FluentTextField InputMode="InputMode.Numeric" @bind-Value="Content.ViewModel.Constitution" Label="@StringResources.Character_Constitution" Immediate="true" Required="true" title="@StringResources.Validation_Tooltip_Required" />
