--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/EditCharacter.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/EditCharacter.razor
@@ -9,7 +9,7 @@
         <FluentGrid Style=@($"""background-color: var(--neutral-layer-3); padding: 4px; {(ViewModel.HasValidationErrors ? "border-color: red; border-width: medium;" : "")}""")>
             <FluentGridItem xs="12" sm="12" md="6" lg="4" xl="3" xxl="2" HiddenWhen="@(ViewModel.CharacterViewModelToEdit!.PersonalityViewModel.Search(SearchText ?? string.Empty, true) ? GridItemHidden.None : GridItemHidden.XsAndUp)">
                 <PersonalityCard @ref="personalityCardRef" @bind-ViewModel="@(ViewModel.CharacterViewModelToEdit.PersonalityViewModel)"
-                                 PreviousCard="@rescueDiceCardRef" NextCard="@propertiesCardRef" />
+                                 PreviousCard="@skillsCardRef" NextCard="@propertiesCardRef" />
             </FluentGridItem>
             <FluentGridItem xs="12" sm="12" md="6" lg="4" xl="3" xxl="2" HiddenWhen="@(ViewModel.CharacterViewModelToEdit!.PropertiesViewModel.Search(SearchText ?? string.Empty, true) ? GridItemHidden.None : GridItemHidden.XsAndUp)">
                 <PropertiesCard @ref="propertiesCardRef" @bind-ViewModel="@(ViewModel.CharacterViewModelToEdit.PropertiesViewModel)"
@@ -19,7 +19,7 @@
                 <RescueDicesCard @ref="rescueDiceCardRef" @bind-ViewModel="@(ViewModel.CharacterViewModelToEdit.RescueDicesViewModel)"
                                  PreviousCard="@propertiesCardRef" NextCard="@skillsCardRef" />
             </FluentGridItem>
-            <FluentGridItem xs="12" sm="12" md="6" lg="4" xl="3" xxl="2" HiddenWhen="@(ViewModel.CharacterViewModelToEdit!.RescueDicesViewModel.Search(SearchText ?? string.Empty, true) ? GridItemHidden.None : GridItemHidden.XsAndUp)">
+            <FluentGridItem xs="12" sm="12" md="6" lg="4" xl="3" xxl="2" HiddenWhen="@(ViewModel.CharacterViewModelToEdit!.SkillsViewModel.Search(SearchText ?? string.Empty, true) ? GridItemHidden.None : GridItemHidden.XsAndUp)">
                 <SkillsCard @ref="skillsCardRef" @bind-ViewModel="@(ViewModel.CharacterViewModelToEdit.SkillsViewModel)"
                             PreviousCard="@rescueDiceCardRef" NextCard="@personalityCardRef" />
             </FluentGridItem>
