--- a/DnDCharCtor/DnDCharCtor.Ui/_Imports.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/_Imports.razor
@@ -19,6 +19,7 @@
 @using Microsoft.FluentUI.AspNetCore.Components.Extensions
 
 @using DnDCharCtor.Common.Constants
+@using DnDCharCtor.Common.Extensions
 @using DnDCharCtor.Common.Services
 @using DnDCharCtor.Resources
 @using DnDCharCtor.Models
