--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/EditPropertiesDialog.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/EditPropertiesDialog.razor
@@ -3,26 +3,32 @@
 <EditDialogBase Content="@Content">
     <FluentTextField InputMode="InputMode.Numeric" @bind-Value="Content.ViewModel.Strength" Label="@StringResources.Character_Strength" Immediate="true" Required="true" title="@StringResources.Validation_Tooltip_Required" />
     <ValidationMessage For="@(() => Content.ViewModel.Strength)" />
+    <div><strong>@StringResources.Character_Strength (@StringResources.Stat_Modifier):</strong> @(Content.ViewModel.Strength.ToInt()) </div>
     <br />
 
     <FluentTextField InputMode="InputMode.Numeric" @bind-Value="Content.ViewModel.Skillfulness" Label="@StringResources.Character_Skillfulness" Immediate="true" Required="true" title="@StringResources.Validation_Tooltip_Required" />
     <ValidationMessage For="@(() => Content.ViewModel.Skillfulness)" />
+    <div><strong>@StringResources.Character_Skillfulness (@StringResources.Stat_Modifier):</strong> @(Content.ViewModel.Skillfulness.ToInt()) </div>
     <br />
 
     <FluentTextField InputMode="InputMode.Numeric" @bind-Value="Content.ViewModel.Constitution" Label="@StringResources.Character_Constitution" Immediate="true" Required="true" title="@StringResources.Validation_Tooltip_Required" />
     <ValidationMessage For="@(() => Content.ViewModel.Constitution)" />
+    <div><strong>@StringResources.Character_Constitution (@StringResources.Stat_Modifier):</strong> @(Content.ViewModel.Constitution.ToInt()) </div>
     <br />
 
     <FluentTextField InputMode="InputMode.Numeric" @bind-Value="Content.ViewModel.Intelligence" Label="@StringResources.Character_Intelligence" Immediate="true" Required="true" title="@StringResources.Validation_Tooltip_Required" />
     <ValidationMessage For="@(() => Content.ViewModel.Intelligence)" />
+    <div><strong>@StringResources.Character_Intelligence (@StringResources.Stat_Modifier):</strong> @(Content.ViewModel.Intelligence.ToInt()) </div>
     <br />
 
     <FluentTextField InputMode="InputMode.Numeric" @bind-Value="Content.ViewModel.Wisdom" Label="@StringResources.Character_Wisdom" Immediate="true" Required="true" title="@StringResources.Validation_Tooltip_Required" />
     <ValidationMessage For="@(() => Content.ViewModel.Wisdom)" />
+    <div><strong>@StringResources.Character_Wisdom (@StringResources.Stat_Modifier):</strong> @(Content.ViewModel.Wisdom.ToInt()) </div>
     <br />
 
     <FluentTextField InputMode="InputMode.Numeric" @bind-Value="Content.ViewModel.Charisma" Label="@StringResources.Character_Charisma" Immediate="true" Required="true" title="@StringResources.Validation_Tooltip_Required" />
     <ValidationMessage For="@(() => Content.ViewModel.Charisma)" />
+    <div><strong>@StringResources.Character_Charisma (@StringResources.Stat_Modifier):</strong> @(Content.ViewModel.Charisma.ToInt()) </div>
     <br />
 
     <FluentTextField InputMode="InputMode.Numeric" @bind-Value="Content.ViewModel.Inspiration" Label="@StringResources.Character_Inspiration" Immediate="true" Required="true" title="@StringResources.Validation_Tooltip_Required" />
@@ -36,3 +42,4 @@
     <FluentTextField InputMode="InputMode.Numeric" @bind-Value="Content.ViewModel.PassiveWisdomRecognition" Label="@StringResources.Character_PassiveWisdomRecognition" Immediate="true" Required="true" title="@StringResources.Validation_Tooltip_Required" />
     <ValidationMessage For="@(() => Content.ViewModel.PassiveWisdomRecognition)" />
 </EditDialogBase>
+
